--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -5,97 +5,99 @@
   </div>
 </div>
 <!-- Page content -->
-<div class="container-fluid mt--7" [hidden]="!authenticated()">
-  <!-- Table enseignant visible par étudiant -->
-  <div class="row  mb-5">
-    <div class="col">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <h3 class="mb-0">Liste des enseignants</h3>
-        </div>
-        <div class="table-responsive">
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">Nom</th>
-                <th scope="col">Prenom</th>
-                <th scope="col">E-mail</th>
-                <th scope="col">Numéro de téléphone</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let u of users">
-                <th scope="row">
-                  <div class="media align-items-center">
-                    {{u.nom}}
-                  </div>
-                </th>
-                <td>{{u.prenom}}</td>
-                <td><a href = "mailto: {{u.email}}"><i class="ni ni-email-83"></i></a></td>
-                <td><a href="tel:+0{{u.numeroTel}}">Appeler</a></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="card-footer py-4">
-          <nav aria-label="...">
-            <ul class="pagination justify-content-end mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" href="javascript:void(0)" tabindex="-1">
-                  <i class="fas fa-angle-left"></i>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="javascript:void(0)">1</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">
-                  <i class="fas fa-angle-right"></i>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Formulaire Evaluation -->
-  <form (ngSubmit)="addEvaluation()">
-    <h3>Formulaire évaluation</h3>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <select class="custom-select" name="cours" id="" [(ngModel)]="evaluation.cours">
-            <option selected>Sélectionner un cours</option>
-            <option [ngValue]="c" *ngFor="let c of courses">{{c.libelleCours}}</option>
-          </select>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="form-group">
-          <select class="custom-select" name="personne" id="" [(ngModel)]="evaluation.personne">
-            <option selected>Sélectionner un enseignant</option>
-            <option [ngValue]="p" *ngFor="let p of users">{{p.nom}} {{p.prenom}}</option>
-          </select>
-        </div>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <div class="input-group mb-4">
-            <textarea class="form-control form-control-alternative" rows="3" placeholder="Evaluer le cours" name="commentaire" id="" [(ngModel)]="evaluation.commentaire"></textarea>
+<div [hidden]="!authenticated()">
+  <div class="container-fluid mt--7">
+    <!-- Table enseignant visible par étudiant -->
+    <div class="row  mb-5">
+      <div class="col">
+        <div class="card shadow">
+          <div class="card-header border-0">
+            <h3 class="mb-0">Liste des enseignants</h3>
+          </div>
+          <div class="table-responsive">
+            <table class="table align-items-center table-flush">
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">Nom</th>
+                  <th scope="col">Prenom</th>
+                  <th scope="col">E-mail</th>
+                  <th scope="col">Numéro de téléphone</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let u of users">
+                  <th scope="row">
+                    <div class="media align-items-center">
+                      {{u.nom}}
+                    </div>
+                  </th>
+                  <td>{{u.prenom}}</td>
+                  <td><a href="mailto: {{u.email}}"><i class="ni ni-email-83"></i></a></td>
+                  <td><a href="tel:+0{{u.numeroTel}}">Appeler</a></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="card-footer py-4">
+            <nav aria-label="...">
+              <ul class="pagination justify-content-end mb-0">
+                <li class="page-item disabled">
+                  <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                    <i class="fas fa-angle-left"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                <li class="page-item active">
+                  <a class="page-link" href="javascript:void(0)">1</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="javascript:void(0)">
+                    <i class="fas fa-angle-right"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
           </div>
         </div>
       </div>
-      <!--
+    </div>
+
+    <!-- Formulaire Evaluation -->
+    <form (ngSubmit)="addEvaluation()">
+      <h3>Formulaire évaluation</h3>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <select class="custom-select" name="cours" id="" [(ngModel)]="evaluation.cours">
+              <option selected>Sélectionner un cours</option>
+              <option [ngValue]="c" *ngFor="let c of courses">{{c.libelleCours}}</option>
+            </select>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="form-group">
+            <select class="custom-select" name="personne" id="" [(ngModel)]="evaluation.personne">
+              <option selected>Sélectionner un enseignant</option>
+              <option [ngValue]="p" *ngFor="let p of users">{{p.nom}} {{p.prenom}}</option>
+            </select>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <div class="input-group mb-4">
+              <textarea class="form-control form-control-alternative" rows="3" placeholder="Evaluer le cours"
+                name="commentaire" id="" [(ngModel)]="evaluation.commentaire"></textarea>
+            </div>
+          </div>
+        </div>
+        <!--
       <div class="col-md-6">
         <div class="form-group">
           <div class="input-group mb-4">
@@ -104,77 +106,77 @@
         </div>
       </div>
       -->
-    </div>    
-    <div class="row">
-      <div class="col-md-6">
-        <div class="form-group">
-          <button class="btn btn-primary" type="submit" >Ajouter une évaluation</button>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="form-group">
+            <button class="btn btn-primary" type="submit">Ajouter une évaluation</button>
+          </div>
         </div>
       </div>
-    </div>
-  </form>
+    </form>
 
-  <!-- Table évaluations enseignants -->
-  <div class="row  mb-5">
-    <div class="col">
-      <div class="card shadow">
-        <div class="card-header border-0">
-          <h3 class="mb-0">Liste des évaluations</h3>
-        </div>
-        <div class="table-responsive">
-          <table class="table align-items-center table-flush">
-            <thead class="thead-light">
-              <tr>
-                <th scope="col">ID évaluation</th>
-                <th scope="col">Contenu évaluation</th>
-                <th scope="col">Cours associé</th>
-                <th scope="col">Enseignant</th>
-                <th scope="col">Action</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let e of evaluations">
-                <th scope="row">
-                  <div class="media align-items-center">
-                    {{e.idEvaluation}}
-                  </div>
-                </th>
-                <td>{{e.commentaire}}</td>
-                <td>{{e.cours}}</td>
-                <td></td>
-                <td><button (click)="deleteEvaluation(e.idEvaluation)" class="btn btn-danger">Supprimer</button></td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-        <div class="card-footer py-4">
-          <nav aria-label="...">
-            <ul class="pagination justify-content-end mb-0">
-              <li class="page-item disabled">
-                <a class="page-link" href="javascript:void(0)" tabindex="-1">
-                  <i class="fas fa-angle-left"></i>
-                  <span class="sr-only">Previous</span>
-                </a>
-              </li>
-              <li class="page-item active">
-                <a class="page-link" href="javascript:void(0)">1</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
-              </li>
-              <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
-              <li class="page-item">
-                <a class="page-link" href="javascript:void(0)">
-                  <i class="fas fa-angle-right"></i>
-                  <span class="sr-only">Next</span>
-                </a>
-              </li>
-            </ul>
-          </nav>
+    <!-- Table évaluations enseignants -->
+    <div class="row  mb-5">
+      <div class="col">
+        <div class="card shadow">
+          <div class="card-header border-0">
+            <h3 class="mb-0">Liste des évaluations</h3>
+          </div>
+          <div class="table-responsive">
+            <table class="table align-items-center table-flush">
+              <thead class="thead-light">
+                <tr>
+                  <th scope="col">ID évaluation</th>
+                  <th scope="col">Contenu évaluation</th>
+                  <th scope="col">Cours associé</th>
+                  <th scope="col">Enseignant</th>
+                  <th scope="col">Action</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let e of evaluations">
+                  <th scope="row">
+                    <div class="media align-items-center">
+                      {{e.idEvaluation}}
+                    </div>
+                  </th>
+                  <td>{{e.commentaire}}</td>
+                  <td>{{e.cours}}</td>
+                  <td></td>
+                  <td><button (click)="deleteEvaluation(e.idEvaluation)" class="btn btn-danger">Supprimer</button></td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+          <div class="card-footer py-4">
+            <nav aria-label="...">
+              <ul class="pagination justify-content-end mb-0">
+                <li class="page-item disabled">
+                  <a class="page-link" href="javascript:void(0)" tabindex="-1">
+                    <i class="fas fa-angle-left"></i>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                </li>
+                <li class="page-item active">
+                  <a class="page-link" href="javascript:void(0)">1</a>
+                </li>
+                <li class="page-item">
+                  <a class="page-link" href="javascript:void(0)">2 <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="page-item"><a class="page-link" href="javascript:void(0)">3</a></li>
+                <li class="page-item">
+                  <a class="page-link" href="javascript:void(0)">
+                    <i class="fas fa-angle-right"></i>
+                    <span class="sr-only">Next</span>
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
     <!-- Formulaires questions -->
     <form (ngSubmit)="addQuestion()">
@@ -183,7 +185,8 @@
         <div class="col-md-6">
           <div class="form-group">
             <div class="form-group">
-              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Entrer une catégorie"  name="categorie" id="" [(ngModel)]="question.categorie">
+              <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Entrer une catégorie"
+                name="categorie" id="" [(ngModel)]="question.categorie">
             </div>
           </div>
         </div>
@@ -200,7 +203,8 @@
         <div class="col-md-6">
           <div class="form-group">
             <div class="input-group mb-4">
-              <textarea class="form-control form-control-alternative" rows="3" placeholder="Rédiger votre question" name="question" id="" [(ngModel)]="question.question"></textarea>
+              <textarea class="form-control form-control-alternative" rows="3" placeholder="Rédiger votre question"
+                name="question" id="" [(ngModel)]="question.question"></textarea>
             </div>
           </div>
         </div>
@@ -208,13 +212,13 @@
       <div class="row">
         <div class="col-md-6">
           <div class="form-group">
-            <button class="btn btn-primary" type="submit" >Ajouter une question</button>
+            <button class="btn btn-primary" type="submit">Ajouter une question</button>
           </div>
         </div>
       </div>
       <div class="clearfix"></div>
     </form>
-  
+
     <!-- Table questions étudiants -->
     <div class="row  mb-5">
       <div class="col">
@@ -276,6 +280,7 @@
         </div>
       </div>
     </div>
+  </div>
 </div>
 
 <div [hidden]="authenticated()">
