--- a/src/app/pages/user-profile/user-profile.component.html
+++ b/src/app/pages/user-profile/user-profile.component.html
@@ -142,7 +142,7 @@
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
-          <input class="form-control" type="text" placeholder="Mot de passe" [(ngModel)]="personne.password"
+          <input class="form-control" type="password" placeholder="Mot de passe" [(ngModel)]="personne.password"
             name="password">
         </div>
       </div>
